# grnbenchmarks

./: .gitignore  CMakeLists.txt  README.md  flappy.dna  ship.dna
script/: evoplot
src/: bestiau.hpp  coverage.hpp  maindbg.cpp  mainevo.cpp  mainflappykeyboard.cpp  ship.hpp  signalxp.hpp
src/include/gaga/: README.md  gaga.hpp
src/include/gaga/include/: logger.hpp
src/include/grgen/: README.md  best.hpp  classic.hpp  grn.hpp  multiint.hpp  multireal.hpp  protein.hpp
